--- a/MobileApp/app/src/main/res/values/strings.xml
+++ b/MobileApp/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">example2022</string>
+    <string name="convert_text">Convert</string>
+    <string name="dollars_text">dollars</string>
+    <string name="no_value_string">No Value</string>
 </resources>
